# docker_workshop

./: README.md  compose.yaml
backend/: .dockerignore  Cargo.toml  Dockerfile  readme.md
backend/migrations/: 0001_create-todos-sequence_up.sql  0002_create-todos-table_up.sql
backend/src/: db.rs  db_migration.rs  main.rs  postgres.rs  todo_item.rs
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  TodoItem.css  TodoItem.tsx  index.css  index.tsx
