[package]
name = "todos-backend"
version = "0.1.0"
authors = ["Wilhelm Friedemann <wilhelm.friedemann@iteratec.com"]
edition = "2018"


[dependencies]
actix-web = "4.8"
actix-cors = "0.7"
deadpool-postgres = "0.14.0"
env_logger = "^0.11"
log = "^0.4"
serde = "1.0"
serde_derive="1.0"
serde_json = "1.0"
tokio-postgres = "^0.7"
tokio-postgres-migration = "^0.1"
